--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "gemini-playground"
+# wrangler.toml
+name = 'gemini'
 main = "src/index.js"
 compatibility_date = "2024-12-30"
 compatibility_flags = ["nodejs_compat"]
